fixed layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -54,8 +54,8 @@
 /* The Fix for the white gap on mobile */
 html,
 body {
+  max-width: 100vw;
   overflow-x: hidden;
-  max-width: 100%;
 }
 
 /* THE FIX: Added the space in 'Clash Display' */
